// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`en-error-pages 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      It looks like something went wrong.
    </h2>
    <div
      className="message"
    >
      Unable to open document. Please try again later.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 2`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      It looks like something went wrong.
    </h2>
    <div
      className="message"
    >
      Unable to open document. Please try again later.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 3`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Page does not exist
    </h2>
    <div
      className="message"
    >
      This page does not exist. Please check that the page address has been entered correctly. If this doesn't resolve the problem, the page may have been deleted.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 4`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred
    </h2>
    <div
      className="message"
    >
      You are not authorized to view this file
    </div>
  </div>
</div>
`;

exports[`en-error-pages 5`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Page does not exist
    </h2>
    <div
      className="message"
    >
      This page does not exist. Please check that the page address has been entered correctly. If this doesn't resolve the problem, the page may have been deleted.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 6`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred 
    </h2>
    <div
      className="message"
    >
      The service is temporarily unavailable.
We are aware of the problem, and are working on fixing it as soon as possible.
Please try refreshing the page in a little while.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 7`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred
    </h2>
    <div
      className="message"
    >
      File not accessible on server. Please try again later.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 8`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred
    </h2>
    <div
      className="message"
    >
      File not accessible on server. Please try again later.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 9`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`en-error-pages 10`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`en-error-pages 11`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Unable to open file
    </h2>
    <div
      className="message"
    >
      Unfortunately, files of this type cannot currently be previewed. Please download the file and open it on your computer.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 12`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Unable to open file
    </h2>
    <div
      className="message"
    >
      Unfortunately, files of this type cannot currently be previewed. Please download the file and open it on your computer.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 13`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred
    </h2>
    <div
      className="message"
    >
      The file conversion was taking too long and timed out. Please try again later.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 14`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Unable to open file
    </h2>
    <div
      className="message"
    >
      You cannot view the file in your browser because it is larger than 128 MB. Please download the file and open it on your computer.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 15`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Unable to open archive
    </h2>
    <div
      className="message"
    >
      You cannot view the archive in your browser because it is larger than 1 GB.
You can still download the file and open it on your computer.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 16`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      This file is empty
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`en-error-pages 17`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      You are not authorized to view this file
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`en-error-pages 18`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      File is password-protected.
    </h2>
    <div
      className="message"
    >
      To view it, save it on your computer.
    </div>
  </div>
</div>
`;

exports[`en-error-pages 19`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      File not found
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`en-error-pages 20`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      An error occurred
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`en-error-pages 21`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Please reopen the file
    </h2>
    <div
      className="message"
    >
      Documents that you view in Browser are stored in memory for 24 hours. To make sure that you don't lose anything important, save files to Yandex Disk. This will allow you to save and edit files without downloading them to your computer.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Ой, что-то сломалось…
    </h2>
    <div
      className="message"
    >
      Открыть документ не удалось. Пожалуйста, повторите попытку позже.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 2`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Ой, что-то сломалось…
    </h2>
    <div
      className="message"
    >
      Открыть документ не удалось. Пожалуйста, повторите попытку позже.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 3`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Несуществующая страница
    </h2>
    <div
      className="message"
    >
      Такой страницы не существует. Проверьте написание адреса — может быть, вы просто ошиблись при наборе. А может быть этой страницы уже нет.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 4`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    >
      Недостаточно прав для просмотра этого файла
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 5`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Несуществующая страница
    </h2>
    <div
      className="message"
    >
      Такой страницы не существует. Проверьте написание адреса — может быть, вы просто ошиблись при наборе. А может быть этой страницы уже нет.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 6`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    >
      Сервис временно недоступен. Мы уже в курсе и скоро все починим.
Пожалуйста, попробуйте обновить страницу чуть позже.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 7`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    >
      Файл на сервере недоступен. Попробуйте повторить попытку позже.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 8`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    >
      Файл на сервере недоступен. Попробуйте повторить попытку позже.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 9`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`ru-error-pages 10`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`ru-error-pages 11`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не удалось открыть файл
    </h2>
    <div
      className="message"
    >
      В настоящий момент просмотр файлов такого формата не поддерживается. Вы можете скачать файл и открыть его на компьютере.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 12`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не удалось открыть файл
    </h2>
    <div
      className="message"
    >
      В настоящий момент просмотр файлов такого формата не поддерживается. Вы можете скачать файл и открыть его на компьютере.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 13`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    >
      Конвертация файла заняла слишком много времени. Попробуйте повторить попытку позже.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 14`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не удалось открыть файл
    </h2>
    <div
      className="message"
    >
      Размер файла превышает 128 МБ, поэтому его нельзя просмотреть в браузере. Вы можете скачать файл и открыть его на компьютере.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 15`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не удалось открыть архив
    </h2>
    <div
      className="message"
    >
      Размер архива превышает 1 ГБ, поэтому его нельзя просмотреть в браузере.
Вы можете скачать файл и открыть его на компьютере.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 16`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Этот файл пустой
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`ru-error-pages 17`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Недостаточно прав для просмотра этого файла
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`ru-error-pages 18`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Файл защищён паролем.
    </h2>
    <div
      className="message"
    >
      Для просмотра сохраните его на компьютер.
    </div>
  </div>
</div>
`;

exports[`ru-error-pages 19`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Файл не найден
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`ru-error-pages 20`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Произошла ошибка
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`ru-error-pages 21`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Файл нужно открыть заново
    </h2>
    <div
      className="message"
    >
      Документы, которые вы открываете для быстрого просмотра в Браузере, хранятся в его памяти одни сутки. Чтобы не потерять ничего важного, сохраняйте файлы на Яндекс Диске — так вы сможете не только просматривать, но и редактировать их, не скачивая на компьютер.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Eyvah, bir terslik var... 
    </h2>
    <div
      className="message"
    >
      Belge açılamadı. Lütfen daha sonra tekrar deneyin.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 2`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Eyvah, bir terslik var... 
    </h2>
    <div
      className="message"
    >
      Belge açılamadı. Lütfen daha sonra tekrar deneyin.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 3`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Sayfa bulunamadı 
    </h2>
    <div
      className="message"
    >
      Böyle bir sayfa yok. Adresin yazılışını kontrol edin, sadece yazım hatası yapmış olabilirsiniz. Bu sayfa kaldırılmış da olabilir.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 4`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu
    </h2>
    <div
      className="message"
    >
      Dosyayı görüntüleme yetkiniz yok
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 5`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Sayfa bulunamadı 
    </h2>
    <div
      className="message"
    >
      Böyle bir sayfa yok. Adresin yazılışını kontrol edin, sadece yazım hatası yapmış olabilirsiniz. Bu sayfa kaldırılmış da olabilir.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 6`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu  
    </h2>
    <div
      className="message"
    >
      Servise geçici olarak ulaşılamıyor.
Durumundan haberdarız ve en kısa zamanda düzeltmeleri yapacağız.
Bir süre sonra sayfayı yenilemeyi deneyin.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 7`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu
    </h2>
    <div
      className="message"
    >
      Dosyaya sunucuda erişilemiyor. Daha sonra tekrar deneyin.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 8`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu
    </h2>
    <div
      className="message"
    >
      Dosyaya sunucuda erişilemiyor. Daha sonra tekrar deneyin.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 9`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`tr-error-pages 10`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`tr-error-pages 11`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Dosya açılamadı
    </h2>
    <div
      className="message"
    >
      Bu dosya türü henüz desteklenmiyor. Dosyayı indirip bilgisayarınıza görüntüleyebilirsiniz.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 12`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Dosya açılamadı
    </h2>
    <div
      className="message"
    >
      Bu dosya türü henüz desteklenmiyor. Dosyayı indirip bilgisayarınıza görüntüleyebilirsiniz.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 13`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu
    </h2>
    <div
      className="message"
    >
      Dönüştürme çok uzun sürdü ve işlem zaman aşımına uğradı
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 14`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Dosya açılamadı
    </h2>
    <div
      className="message"
    >
      Dosyanın boyutu 128 MB'yi aştığı için tarayıcıda görüntülenemiyor. Dosyayı açmak için önce bilgisayarınıza indirmelisiniz.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 15`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Arşiv açılamadı
    </h2>
    <div
      className="message"
    >
      Arşivin boyutu 1 GB'yi aştığı için tarayıcıda görüntülenemiyor.
Dosyayı açmak için önce bilgisayarınıza indirmelisiniz.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 16`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Dosya boş
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`tr-error-pages 17`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Dosyayı görüntüleme yetkiniz yok
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`tr-error-pages 18`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Dosya şifre ile korunuyor.
    </h2>
    <div
      className="message"
    >
      Görüntülemek için bilgisayarınıza kaydedin.
    </div>
  </div>
</div>
`;

exports[`tr-error-pages 19`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Dosya bulunamadı
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`tr-error-pages 20`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Hata oluştu
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`tr-error-pages 21`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Lütfen dosyayı tekrar açın
    </h2>
    <div
      className="message"
    >
      Yandex Browser'da hızlı görüntüleme modunda açtığınız dosyalar tarayıcı belleğinde 24 saat boyunca saklanır. Önemli bilgilerin kaybını önlemek için lütfen dosyalarınızı Yandex Disk'e kaydedin: Böylelikle bunları ister sadece görüntüleyebilir, isterseniz bilgisayarınıza indirmeden istediğiniz gibi düzenleyebilirsiniz.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 1`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Ой, щось зламалося...
    </h2>
    <div
      className="message"
    >
      Відкрити документ не вдалося. Будь ласка, повторіть спробу пізніше.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 2`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Ой, щось зламалося...
    </h2>
    <div
      className="message"
    >
      Відкрити документ не вдалося. Будь ласка, повторіть спробу пізніше.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 3`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Неіснуюча сторінка
    </h2>
    <div
      className="message"
    >
      Такої сторінки не існує. Перевірте написання адреси — можливо, ви просто помилилися під час набору. А можливо, цієї сторінки вже немає.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 4`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    >
      Недостатньо прав для перегляду цього файлу
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 5`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Неіснуюча сторінка
    </h2>
    <div
      className="message"
    >
      Такої сторінки не існує. Перевірте написання адреси — можливо, ви просто помилилися під час набору. А можливо, цієї сторінки вже немає.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 6`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    >
      Сервіс тимчасово недоступний. Ми уже в курсі і скоро все полагодимо.
Будь ласка, спробуйте оновити сторінку трохи пізніше.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 7`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    >
      Файл на сервері недоступний. Спробуйте повторити пізніше.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 8`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    >
      Файл на сервері недоступний. Спробуйте повторити пізніше.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 9`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`uk-error-pages 10`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`uk-error-pages 11`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не вдалося відкрити файл
    </h2>
    <div
      className="message"
    >
      Зараз перегляд файлів такого формату не підтримується. Ви можете завантажити файл і відкрити його на комп'ютері.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 12`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не вдалося відкрити файл
    </h2>
    <div
      className="message"
    >
      Зараз перегляд файлів такого формату не підтримується. Ви можете завантажити файл і відкрити його на комп'ютері.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 13`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    >
      Конвертація файлу зайняла занадто багато часу. Спробуйте повторити пізніше.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 14`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не вдалося відкрити файл
    </h2>
    <div
      className="message"
    >
      Розмір файлу перевищує 128 МБ, тому його не можна переглянути у браузері. Ви можете завантажити файл і відкрити його на комп'ютері.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 15`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Не вдалося відкрити файл
    </h2>
    <div
      className="message"
    >
      Розмір архіву перевищує 1 ГБ, тому його не можна переглянути у браузері.
Ви можете завантажити файл і відкрити його на комп'ютері.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 16`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Цей файл пустий
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`uk-error-pages 17`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Недостатньо прав для перегляду цього файлу
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`uk-error-pages 18`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Файл захищено паролем.
    </h2>
    <div
      className="message"
    >
      Для перегляду збережіть його на комп'ютер.
    </div>
  </div>
</div>
`;

exports[`uk-error-pages 19`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Файл не знайдено 
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`uk-error-pages 20`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Сталася помилка
    </h2>
    <div
      className="message"
    />
  </div>
</div>
`;

exports[`uk-error-pages 21`] = `
<div
  className="viewport"
>
  <div
    className="wrapper"
  >
    <div
      className="icon"
    />
    <h2
      className="title"
    >
      Файл потрібно відкрити заново
    </h2>
    <div
      className="message"
    >
      Документи, які ви відкриваєте для швидкого перегляду у Браузері, зберігаються у його пам'яті одну добу. Щоб не втратити нічого важливого, зберігайте файли на Яндекс Диску — так ви зможете не лише переглядати, але й редагувати їх, не завантажуючи на комп'ютер.
    </div>
  </div>
</div>
`;
